--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -25,6 +25,24 @@ spring:
   config:
     activate:
       on-profile: local
+
+
+  data:
+    redis:
+      host: ${SPRING_DATA_REDIS_HOST:redis}
+      port: ${SPRING_DATA_REDIS_PORT:6379}
+      username: default
+      password: ${SPRING_DATA_REDIS_PASSWORD:1234}
+      database: 0
+
+  cache:
+    type: caffeine
+    caffeine:
+      spec: initialCapacity=10,maximumSize=100,expireAfterWrite=24h
+
+
+
+
 #  mvc:
 #    async:
 #      request-timeout: 1800000   # 30분 (ms 단위)
@@ -39,6 +57,14 @@ spring:
     username: ${LOCAL_DB_USERNAME}
     password: ${LOCAL_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 40
+      minimum-idle: 10
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      keepalive-time: 300000
+
   jpa:
     hibernate:
       ddl-auto: update
