--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,6 +2,10 @@ server:
   port: 8080
   address: 0.0.0.0
 
+  tomcat:
+    threads:
+      max: 500
+
   servlet:
     session:
       timeout: 120m
@@ -58,7 +62,7 @@ spring:
     password: ${LOCAL_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      maximum-pool-size: 40
+      maximum-pool-size: 50
       minimum-idle: 10
       connection-timeout: 30000
       idle-timeout: 600000
